update pom for javadoc error
Took 2 minutes