@@ -530,7 +530,7 @@
                         <notree>true</notree>
                         <additionalOptions>-Xdoclint:none</additionalOptions>
                         <detectJavaApiLink>false</detectJavaApiLink>
-                        <additionalJOption>--add-exports java.base/jdk.internal.reflect=ALL-UNNAMED</additionalJOption>
+<!--                        <additionalJOption>&#45;&#45;add-exports java.base/jdk.internal.reflect=ALL-UNNAMED</additionalJOption>-->
                     </configuration>
                 </plugin>
                 <plugin>
